[gd_scene load_steps=3 format=3 uid="uid://cogx3s8yp5pwe"]

[ext_resource type="Script" path="res://scenes/menus/level_menu/level_menu.gd" id="1_27sb7"]
[ext_resource type="Texture2D" uid="uid://b5r5wel7uyia1" path="res://textures/redbricks_128x128.png" id="2_ut8du"]

[node name="LevelMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_27sb7")

[node name="MarginContainer" type="MarginContainer" parent="."]
top_level = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.5
offset_top = -15.09
offset_right = 47.5
offset_bottom = 85.9106
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Shooter 1" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Shooter
"

[node name="Jumps" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Jump climb"

[node name="Menu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Menu
"

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
texture_filter = 1
layout_mode = 0
offset_right = 640.0
offset_bottom = 480.0
texture = ExtResource("2_ut8du")
stretch_mode = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/Shooter 1" to="." method="_on_shooter_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Jumps" to="." method="_on_jumps_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
